--- a/DigitToWord/DigitToWord.csproj
+++ b/DigitToWord/DigitToWord.csproj
@@ -11,11 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.6.0.264807" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.482894" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="FreshMvvm" Version="3.0.0" />
-    <PackageReference Include="Fody" Version="5.0.5" />
-    <PackageReference Include="PropertyChanged.Fody" Version="3.0.0" />
+    <PackageReference Include="Fody" Version="5.0.6"><IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+<PrivateAssets>all</PrivateAssets>
+</PackageReference>
+    <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controls\" />
