--- a/DigitToWord.iOS/DigitToWord.iOS.csproj
+++ b/DigitToWord.iOS/DigitToWord.iOS.csproj
@@ -130,6 +130,9 @@
     <PackageReference Include="Xamarin.Forms.Visual.Material">
       <Version>4.0.0.482894</Version>
     </PackageReference>
+    <PackageReference Include="UXDivers.GorillaPlayer.SDK.AutoConfig">
+      <Version>1.5.0-Beta4</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
